static/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    background-color: antiquewhite;
    font-family: "Montserrat", sans-serif;
}

/* CSS for navbar */
li, a {
    font-family: "Montserrat", sans-serif;
    font-weight: 500;
    font-size: 16px;
    color: #edf0f1;
    text-decoration: none;
    background-color: #24252A;
}

header {
    display: inline-flex;
    align-items: center;
    padding: 30px 10%;
    justify-content: space-between;
    background-color: #24252A;
    width: 100%;
}

.logo {
    cursor: pointer;
    color:lightcyan;
}

.nav_links li {
    display: inline-block;
    padding: 0px 20px;
}

.nav_links li a {
    transition: all 0.3s ease 0s;
}

.nav_links li a:hover {
    color: #0088a9;
}

/* CSS for information on the about page */
.info h1 {
    text-align: center;    
    padding: 30px;
}

.info p {
    text-align: center;
    width: 60%;
    margin: auto;
    padding-bottom: 40px;
}

.info button {
    margin: 0 auto;
    display: block;
    padding: 10px;
    transition: all 0.3s ease 0s;
}

.info button:hover{
    background-color: lightcyan;
    color: #0088a9;
    cursor: pointer;
}



/* CSS for the theme page */
.headings {
    display: inline-table;
    text-align: center;
    width: 100%;
}

.randomButton {
    float: right;
    cursor: pointer;
    padding: 2px;
    margin-right: 3px;
    margin-bottom: 10px;
}

.randomButton p{
    float: left;
    margin-top: 10px;
    user-select: none;
}

.randomButton:hover {
    filter: grayscale(100%);
    color: #0088a9;
}

.mainthemepics, .altthemepics 
{
    column-gap: 0px;
    text-align: center;
}

.imagediv {
    position: relative;
    margin: 0px auto;
    margin-bottom: 10px;
    max-width: 400px;
    overflow:hidden;
}

.theimgs {
    opacity:0.93;
    transition: .3s ease-in-out;
    width: 100%;
    height: 100%;
}

/* have a cool zoom in effect on hover. Achieved used overflow:hidden on the img div so wouldn't overflow. 
Also set div's max dimensions according the images' width and height" */
.theimgs:hover {
    opacity: 1;
    transform: scale(1.1);
    cursor: pointer;
}

.imgdescript {
    display: none;
}

.imgdescript a {
    transition: all 0.3s ease 0s;
}

.imgdescript a:hover {
    color: #0088a9;
}

/* display the img caption on hover */
.imagediv:hover .imgdescript{
    display: inline;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    bottom: 10px;
    text-align: center;
    max-width: 400px;
}


.imgdescripttext{ 
    color:white;
    background-color: rgba(0,0,0, 0.9);
}

/* CSS to resize the columns when the window is smaller */
@media (min-width: 1551px)
{
    .mainthemepics, .altthemepics 
    {
        column-count: 4;
    }
}
@media (min-width: 1220px) and (max-width: 1550px)
{
    .mainthemepics, .altthemepics 
    {
        column-count: 3;
    }
}
@media (min-width: 810px) and (max-width: 1219px)
{
    .mainthemepics, .altthemepics 
    {
        column-count: 2;
    }
    .nav_links {
        background-color: #24252A;
    }
}
@media (max-width: 809px)
{
    .mainthemepics, .altthemepics 
    {
        column-count: 1;
    }
    .nav_links {
        background-color: #24252A;
    }
}

/* styling for when user clicks on an image */
/* close button css for when user clicks on an image */
#closeButton {
    position: fixed;
    background-color: initial;
    height: 50px;
    width: 50px;
    top: 10px;
    right: 10px;
    display: none;
    z-index: 3;
}

#closeButton:hover {
    cursor: pointer;
    filter: brightness(0) invert(1);
}

/* image css for when user clicks on an image */
.enlarged {
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
}

/* make the background dark for when user clicks on an image */
.covered {
    position: fixed;
    width: 100%;
    height: 100%;
    background-color:rgba(0,0,0, 0.6);
    top: 0;
    z-index: 1;
}

#enlargedImg {
    width : 100%;
    height: 100%;
    object-fit: cover;
    background-color:rgba(0,0,0, 0.0);
}

/* css for the past themes page */
table {
    border: 2px solid black;
    width: 100%;
    overflow: hidden;
}

tr {
    width: 100%;
}

/* css for the timer */
.timer {
    right: -252px;
    position: fixed;
    writing-mode: vertical-rl;
    transform:scale(-1);
    z-index: 3;
    background-color: black;
    color: white;
    padding: 30px 2px;
    top: 10%;
    transition: all 0.5s ease;
}

.timer:hover {
    right: 0;
}

.timerInner {
    width: 250px;
    background-color: black;
    user-select: none;
    transform: rotate(180deg);
    display: flex;
    justify-content: center;
    align-items: center;
}

.timer h1 {
    background-color: black;
    user-select: none;
}

.timer input {
    height: 45px;
    width: 230px;
    margin-bottom: 5px;
    margin-right: 10px;
    font-size: 32px;
    resize: none;
    padding-top: 5px;
    z-index: 1;
}

.timerDigits {
    transform:rotate(270deg);
    font-size: 30px;
    padding: 4px;
    display: inline-block;
    position: absolute;
    height: 230px;
    text-align: center;
    bottom: -50px;
    left: 98px;
}

.timerDigits span{
    color: rgba(0,0,0, 0.5);
}

.timerButtons{
    text-align: center;
}

.timerButtons button {
    display: block;
    margin: 0 5px;
    padding: 5px;
}

#digitCursor {
    position: relative;
    left: 3px;
}

